Instantiate EIDriver in main. Add supress warnings for deprecated URL strings. Updated README with compile and execution commands. Update gitignore.